fixed loader page

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <p class="loader-tagline">Your Smart City Dashboard</p>
             <div class="loader-map" id="loader-map">
-                <img src="assets/interactiveMap.png" alt="City Map" class="map-image">
+                <img src="./assets/interactiveMap.png" alt="City Map" class="map-image">
             </div>
             <div class="loader-stats">
                 <div class="stat-item">
